feat(Dialog): add Dialog component

--- a/app/index.html
+++ b/app/index.html
@@ -10,7 +10,7 @@
     />
   </head>
   <body>
-    <div id="root"></div>
+    <div id="hv-root"></div>
     <script type="module" src="/src/index.tsx"></script>
   </body>
 </html>
