docs: improve vite example
- make App.tsx more minimal so it's easier to replace
- move useful docs & theme switcher out of the main page
- remove package-lock.json to ensure latest versions are installed
  - may take a bit longer to install

--- a/examples/uikit-vite-ts/index.html
+++ b/examples/uikit-vite-ts/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS + Hitachi Vantara UI Kit</title>
+    <title>UI Kit</title>
     <link
       href="https://fonts.googleapis.com/css?family=Open+Sans:100,200,300,400,500,600,700,800,900"
       rel="stylesheet"
