--- a/.storybook/manager-head.html
+++ b/.storybook/manager-head.html
@@ -2,3 +2,9 @@
 <script>
   document.title = "NEXT UI Kit";
 </script>
+<link rel="preconnect" href="https://fonts.googleapis.com" />
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+<link
+  rel="stylesheet"
+  href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&display=swap"
+/>
