feat: add pentaho+ theme

--- a/.storybook/manager-head.html
+++ b/.storybook/manager-head.html
@@ -5,3 +5,7 @@
   rel="stylesheet"
   href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&display=swap"
 />
+<link
+  href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap"
+  rel="stylesheet"
+/>
