--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -1,4 +1,5 @@
 <!-- .storybook/preview-head.html -->
 <style>
   @import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,600;1,400;1,600&display=swap");
+  @import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap");
 </style>
