--- a/apps/app/index.html
+++ b/apps/app/index.html
@@ -10,6 +10,10 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans:400,600"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div id="hv-root"></div>
