--- a/examples/uikit-vite-ts/index.html
+++ b/examples/uikit-vite-ts/index.html
@@ -9,6 +9,10 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans:100,200,300,400,500,600,700,800,900"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div id="root"></div>
