test(Chromatic): better font loading & LineChart diffThreshold
- load Inter & Open Sans fonts in single request & in <link preload>
- increase LineChart visual threshold to avoid browser flukes

--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -1,5 +1,7 @@
 <!-- .storybook/preview-head.html -->
-<style>
-  @import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,600;1,400;1,600&display=swap");
-  @import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap");
-</style>
+<link rel="preconnect" href="https://fonts.googleapis.com" />
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+<link
+  href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&family=Open+Sans:wght@400;600&display=swap"
+  rel="stylesheet"
+/>
