--- a/apps/app/index.html
+++ b/apps/app/index.html
@@ -7,11 +7,7 @@
     <link rel="apple-touch-icon" href="/logo192.png" />
     <title>UI Kit App</title>
     <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans:400,600"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&family=Open+Sans:wght@400;600&display=swap"
       rel="stylesheet"
     />
   </head>
