--- a/examples/uikit-app-shell/index.html
+++ b/examples/uikit-app-shell/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>uikit-app-shell</title>
     <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans:400,600"
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&family=Open+Sans:wght@400;600&display=swap"
       rel="stylesheet"
     />
   </head>
