--- a/packages/cli/src/baselines/vite/index.html
+++ b/packages/cli/src/baselines/vite/index.html
@@ -7,7 +7,7 @@
     <link rel="apple-touch-icon" href="/logo192.png" />
     <title>UI Kit App</title>
     <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,500,600"
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&family=Open+Sans:wght@400;600&display=swap"
       rel="stylesheet"
     />
   </head>
